@@ -3,10 +3,13 @@ package com.robertx22.mine_and_slash.database.data.spells.spell_classes;
 import net.minecraft.text.LiteralText;
 import net.minecraft.text.MutableText;
 
+import java.util.Arrays;
+import java.util.List;
+
 public class SpellTooltips {
 
-    public static MutableText singleTargetProjectile() {
-        return new LiteralText("Throw a projectile, damaging first enemy hit");
+    public static List<MutableText> singleTargetProjectile() {
+        return Arrays.asList(new LiteralText("Throw a projectile."), new LiteralText("Damaging first enemy hit:"));
     }
 
     public static MutableText buff() {
