@@ -80,7 +80,7 @@ public class FrostballSpell extends BaseSpell {
 
         List<Text> list = new ArrayList<>();
 
-        list.add(SpellTooltips.singleTargetProjectile());
+        list.addAll(SpellTooltips.singleTargetProjectile());
 
         list.addAll(getCalculation(ctx).GetTooltipString(info, ctx));
 
